resources/unifi/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: unifi-controller
  name: unifi-controller
spec:
  replicas: 1
  serviceName: unifi-controller
  selector:
    matchLabels:
      app: unifi-controller
  template:
    metadata:
      annotations:
        k8s.v1.cni.cncf.io/networks: macvlan-conf
      labels:
        app: unifi-controller
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - image: ghcr.io/linuxserver/unifi-controller:version-6.0.45
          name: unifi-controller
          ports:
            - containerPort: 8443
          volumeMounts:
            - mountPath: /config
              name: config
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 512Mi
        - image: jessestuart/unifi_exporter:v0.4.0
          name: exporter
          command:
            - /bin/unifi_exporter
          args:
            - "-config.file=/unifi_exporter/config.yml"
          ports:
            - containerPort: 9130
          volumeMounts:
            - name: exporter-config
              mountPath: /unifi_exporter
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          resources:
            limits:
              cpu: 10m
              memory: 64Mi
      restartPolicy: Always
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config
        - name: config-data-sites-default
          configMap:
            name: config-data-sites-default
        - name: exporter-config
          secret:
            secretName: unifi-exporter-credentials
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
