resources/unifi/exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unifi-exporter
  template:
    metadata:
      labels:
        app: unifi-exporter
    spec:
      containers:
      - image: jessestuart/unifi_exporter:v0.4.0
        name: unifi-exporter
        command:
        - /bin/unifi_exporter
        args:
        - "-config.file=/unifi_exporter/config.yml"
        ports:
        - containerPort: 9130
        volumeMounts:
          - name: config
            mountPath: /unifi_exporter/config.yml
            subPath: config.yml
            readOnly: true
        resources:
          limits:
            cpu: "100m"
            memory: "128Mi"
      volumes:
        - name: config
          secret:
            secretName: unifi-exporter-credentials
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: unifi-exporter
  name: unifi-exporter
spec:
  ports:
  - name: metrics
    port: 9130
  selector:
    matchLabels:
      app: unifi-exporter
