resources/unifi/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-controller
spec:
  ports:
    - name: "8443"
      port: 8443
  selector:
    app: unifi-controller
