resources/unifi/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi-controller
  annotations:
    cert-manager.io/cluster-issuer: addem-se-letsencrypt
    ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: unifi.addem.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unifi-controller
                port:
                  number: 8443
  tls:
    - hosts:
        - unifi.addem.se
      secretName: unifi-cert
